    - WgxShowWindow and WgxHideWindow definitions added to wgx.h file
    - WgxSetProcessPriority routine added to wgx library
    - Windows Server 2003 DDK needs to be patched in order to compile
      the program; look at rsc/compilation.dox for details


  Version 5.1.2  2012-12-
  ------------------------------------------------------------------------------
    - bug fix: boot time logs forced to use correct error messages
    - now displaying a message when installing on a newer version than Windows 7,
      to make users aware of UltraDefrag being not tested on anything newer than
      Windows 7 currently

    - the following translations were updated:

      Spanish (ES), 


  Version 5.1.1  2012-11-11
  ------------------------------------------------------------------------------
    - it is now supported to install over an existing portable package
    - a problem with launching the cluster map legend from the help menu,
      if the path to the HTML file contained spaces, is fixed

    - the following translations were updated:

      Czech, Greek, Hungarian, Iloko, Javanese, Latvian, Tamil


  Version 5.1.0  2012-10-18
  ------------------------------------------------------------------------------
    - added fragmentation level display to all the interfaces
    - added ability to skip the disk processing when fragmentation level
      is below a specified one (fragmentation_threshold option in GUI;
      UD_FRAGMENTATION_THRESHOLD environment variable in command line tool
      and boot time interface)
    - added settings for file pattern groups to easier exclude or include
      groups of files (fixes issue #3449331)
    - bug fix: GUI forced to handle any setting changes reliably
    - bug fix: filters forced to be case insensitive for all the characters
      (they worked properly for ANSI characters only)
    - added ability to specify the installation folder
    - added log file creation to debug silent installations
